# very_simple_mimimalistic_p2p_chat

./: Cargo.toml  README.md
src/: main.rs
src/internals/: crypto.rs  mod.rs  network.rs
