[package]
name = "very_simple_mimimalistic_p2p_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
#trust-dns-proto =  { version = "0.20.3", features = ["mdns"] }
#trust-dns = "0.20.3"
#tokio-core = "0.1.18"
tokio = { version = "1.16.1", features = ["macros","rt-multi-thread","net","time"] }
ed25519-dalek-blake3 = "1.0.6"
rand = "0.8.4"
error-chain = "0.12.4"
base64 = "0.13.0"
#sha2 = "0.10.1"
blake3 = "1.3.1"
message-io = "0.14.3"
serde = "1.0.136"
bincode = "1.3.3"
hex = "0.4.3"
primitive-types = "0.10.1"
uint = "0.9.2"
socket2 = "0.4.4"
futures = "0.3.19"
code_location = "1.1.0"